package edu.fiuba.algo3.modelo.gladiador;

public interface Estado {
    public void avanzar(int pasos);
}
