@startuml

skinparam linetype ortho

class Gladiador {
}

class GladiadorSano {
    + GladiadorSano(Gladiador):
    gladiador: Gladiador+ avanzar(int): void
}
class GladiadorLesionado {
    + GladiadorLesionado(Gladiador):
    gladiador: Gladiador+ avanzar(int): void
}
class GladiadorSinEnergia {
    + GladiadorSinEnergia(Gladiador):
    gladiador: Gladiador+ avanzar(int): void
}

interface Estado << interface >> {
    + avanzar(int, int): void
}

Gladiador <-- GladiadorLesionado
Gladiador <-- GladiadorSano
Gladiador <-- GladiadorSinEnergia

GladiadorLesionado .-> GladiadorSano : "«create»"
Gladiador .-> GladiadorSano : "«create»"
Gladiador .-> GladiadorSinEnergia : "«create»"

GladiadorLesionado   .--^  Estado
GladiadorSano        .--^  Estado
GladiadorSinEnergia  .--^  Estado
@enduml